--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weatherog</title>
+    <style>
+      #root{
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
