--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -28,11 +34,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weatherog</title>
-    <style>
-      #root{
-        width: 100%;
-      }
-    </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
